@@ -2,6 +2,7 @@ ver 0.23 (not yet released)
 * protocol
   - new command "getvol"
   - show the audio format in "playlistinfo"
+  - support "listfiles" with arbitrary storage plugins
 * database
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
